--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,15 +1,15 @@
-FROM phpdockerio/php71-fpm:latest
+FROM phpdockerio/php72-fpm:latest
 WORKDIR "/application"
 
 RUN apt-get update && \
+	apt-get install -y apt-utils && \
     apt-get install -y unzip && \
 	apt-get install -y supervisor && \
 	apt-get install -y libzip-dev && \
 	apt-get install -y libpng-dev && \
-	apt-get install -y wget && \
-    apt-get -y install git && \
-    apt-get -y install cron && \
-    apt-get -y install php7.1-sqlite3 php7.1-pdo  php7.1-mysql && \
+    apt-get install -y git && \
+    apt-get install -y cron && \
+    apt-get install -y --no-install-recommends php7.2-mysql php7.2-sqlite3 php7.2-gd php-imagick php-memcached && \
     apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 COPY ./ /application
@@ -20,4 +20,4 @@ RUN (crontab -l ; echo "* * * * * /usr/local/bin/php /application/artisan schedu
 
 EXPOSE 9090
 
-CMD cp ./.env.example ./.env; php artisan l5-swagger:generate; service supervisor start; service cron start; chmod -R 777 .; php-fpm
+CMD cp ./.env.scenario.mail ./.env; php artisan l5-swagger:generate; service supervisor start; service cron start; chmod -R 777 .; php-fpm
