--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:IbnOVguO4ktNRpILKufSiSziljBTodFBoOPU8mlYHSo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=testuser
+MAIL_PASSWORD=testpwd
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
