remove # from url

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -16,6 +16,11 @@ server {
         rewrite ^.*$ /index.php last;
     }
 
+    location / {
+      try_files $uri $uri/ /index.php;
+    }
+
+
     location ~ \.php$ {
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
